--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>I'm a Web Developer</h2>
     <hr/>
     <h3>
-    <a href="./public/movie-ranking1.html">Web Series Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png"  height="400" width="500"/>
+    <a href="./public/movie-ranking.html">Web Series Ranking Project</a></h3>
+    <img src="./assets/images/movie-ranking.png"  height="800" width="700"/>
     
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png"  height="600" width="400"/>
